--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     font-size: 10px;
-    background: url('/Drumbackground.jpg') bottom center;
+    background: url('https://github.com/Mr-Clumsee/Drum-Kit/blob/main/bg.jpg') bottom center;
+    https://github.com/Mr-Clumsee/Drum-Kit/blob/main/bg.jpg
     background-size: cover;
   }
   
