--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url('https://github.com/Mr-Clumsee/Drum-Kit/blob/main/bg.jpg') bottom center;
+    background: url("https://github.com/Mr-Clumsee/Drum-Kit/blob/main/bg.jpg") bottom center;
     background-size: cover;
   }
   
