--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url("https://github.com/Mr-Clumsee/Drum-Kit/blob/8efcc5068f352b55d5cbfd5e0d41d9d15239be4b/bg.jpg") bottom center;
+    background: url(https://github.com/Mr-Clumsee/Drum-Kit/blob/8efcc5068f352b55d5cbfd5e0d41d9d15239be4b/bg.jpg) bottom center;
     background-size: cover;
   }
   
